# uAircraft

./: CMakeLists.txt  README.md  run.bat  uAircraft.code-workspace
include/: command.h  commander.h  coordinate.h  orientation.h  position.h  pub.h  uAircraft.h  utest.h
include/base/: Role.h  Singleton.h
src/: command.cpp  coordinate.cpp  orientation.cpp  position.cpp  pub.cpp  uAircraft.cpp
test/: test.cpp  testUnmandAircraft.cpp  test_main.cpp
